Fix Java 17 List.getFirst incompatibilities